--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "framer-motion": "^10.12.21",
+        "react-html5video": "^2.5.1",
+        "react-icons": "^4.10.1",
+        "react-responsive": "^9.0.2"
     }
 }
